--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.2",
-    "inquirer": "^8.2.7"
+    "ink": "^6.3.1",
+    "inquirer": "^8.2.7",
+    "react": "^19.2.0"
   }
 }
