--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "noneeds",
-  "version": "1.1.6",
+  "name": "noneed",
+  "version": "1.1.9",
   "description": "A short app which can create a custom PWA.",
   "main": "index.js",
   "scripts": {
