--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "noneed",
-  "version": "1.2.3",
+  "version": "1.3.0",
   "description": "A short app which can create a custom PWA.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "node OnInstalled.js"
   },
   "keywords": [],
   "author": "",
